--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div id="container">
     <div id="eggs">Eggs eaten: 0</div>
     <div id="donations">Total raised: $0.00</div>
+    <div id="latest">Latest egg: $0.00</div>
     <div id="message">Alert: test</div>
   </div>
 
@@ -35,6 +36,7 @@
         const data = await res.json();
         document.getElementById('eggs').textContent = `Eggs eaten: ${data.eggs}`;
         document.getElementById('donations').textContent = `Total raised: $${Number(data.donation_total).toFixed(2)}`;
+        document.getElementById('latest').textContent = `Egg ${data.eggs} raised $${Number(data.donation_this_egg).toFixed(2)}`;
         document.getElementById('message').textContent = data.donation_message;
       } catch (err) {
         console.error('Error fetching overlay data:', err);
