--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 </head>
 <body>
   <div id="container">
+    <div id="message"></div>
     <div id="eggs">Eggs eaten: 0</div>
     <div id="donations">Total raised: $0.00</div>
     <div id="per-egg">This egg: $0.00</div>
-    <div id="message"></div>
   </div>
 
   <script>
@@ -39,7 +39,9 @@
         document.getElementById('message').textContent = data.donation_message || '';
         document.getElementById('eggs').textContent = `Eggs eaten: ${data.eggs}`;
         document.getElementById('donations').textContent = `Total raised: $${Number(data.donation_total).toFixed(2)}`;
-        document.getElementById('per-egg').textContent = `This egg: $${(data.donation_this_egg)}`;
+        document.getElementById('per-egg').textContent = `This egg: $${data.donation_this_egg}`;
+        //document.getElementById('per-egg').textContent = `This egg: $${Number(data.donation_this_egg).toFixed(2)}`;
+        
       } catch (err) {
         console.error('Error fetching overlay data:', err);
       }
