--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         const res = await fetch(endpoint);
         const data = await res.json();
 
-        document.getElementById('message').textContent = data.donation_message || '';
+        document.getElementById('message').textContent = data.donation_message;
         document.getElementById('eggs').textContent = `Eggs eaten: ${data.eggs}`;
         document.getElementById('donations').textContent = `Total raised: $${Number(data.donation_total).toFixed(2)}`;
         document.getElementById('per-egg').textContent = `This egg: $${Number(data.donation_this_egg).toFixed(2)}`;
